--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
 	<body>
 		<script type="text/javascript" src="framer/library.js"></script>
 		<script src="app.js"></script>
+		<p>Drag the dot</p>
 	</body>
 
