--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
 	<body>
 		<script type="text/javascript" src="framer/library.js"></script>
 		<script src="app.js"></script>
-		<p>Drag the dot</p>
+		<p style="position: absolute; top: 200px; left: 100px;">Drag the dot >></p>
 	</body>
 
